--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/Theme.GeoLocation_Android">
+        <service android:name=".LocationService"/>
+
         <activity
                 android:name=".MainActivity"
                 android:exported="true">
