--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GeoLocation_Android">
+        <activity
+            android:name=".PlainActivity"
+            android:exported="false" />
 
         <service
             android:name=".LocationService"
             android:enabled="true"
-            android:exported="false"
-            android:foregroundServiceType="location" />
+            android:exported="false" />
 
         <activity
             android:name=".MainActivity"
